bk_ida/bzip2ida/c3/testf
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2395:18: error: expected expression
v22 = *( _OWORD *)&v15[v20 + 16]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2395:10: error: use of undeclared identifier '_OWORD'
v22 = *( _OWORD *)&v15[v20 + 16]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2396:12: error: expected expression
*( _OWORD *)&unused[v20] = *( _OWORD *)&v15[v20]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2396:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v20] = *( _OWORD *)&v15[v20]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2396:39: error: expected expression
*( _OWORD *)&unused[v20] = *( _OWORD *)&v15[v20]; 
                                      ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2396:31: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v20] = *( _OWORD *)&v15[v20]; 
                              ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2397:12: error: expected expression
*( _OWORD *)&unused[v20 + 16] = v22; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2397:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v20 + 16] = v22; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2398:18: error: expected expression
v23 = *( _OWORD *)&v15[v20 + 48]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2398:10: error: use of undeclared identifier '_OWORD'
v23 = *( _OWORD *)&v15[v20 + 48]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2399:12: error: expected expression
*( _OWORD *)&unused[v20 + 32] = *( _OWORD *)&v15[v20 + 32]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2399:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v20 + 32] = *( _OWORD *)&v15[v20 + 32]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2399:44: error: expected expression
*( _OWORD *)&unused[v20 + 32] = *( _OWORD *)&v15[v20 + 32]; 
                                           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2399:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v20 + 32] = *( _OWORD *)&v15[v20 + 32]; 
                                   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2400:12: error: expected expression
*( _OWORD *)&unused[v20 + 48] = v23; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2400:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v20 + 48] = v23; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2401:18: error: expected expression
v24 = *( _OWORD *)&v15[v20 + 80]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2401:10: error: use of undeclared identifier '_OWORD'
v24 = *( _OWORD *)&v15[v20 + 80]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2402:12: error: expected expression
*( _OWORD *)&unused[v20 + 64] = *( _OWORD *)&v15[v20 + 64]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2402:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v20 + 64] = *( _OWORD *)&v15[v20 + 64]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2402:44: error: expected expression
*( _OWORD *)&unused[v20 + 64] = *( _OWORD *)&v15[v20 + 64]; 
                                           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2402:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v20 + 64] = *( _OWORD *)&v15[v20 + 64]; 
                                   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2403:12: error: expected expression
*( _OWORD *)&unused[v20 + 80] = v24; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2403:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v20 + 80] = v24; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2404:18: error: expected expression
v25 = *( _OWORD *)&v15[v20 + 112]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2404:10: error: use of undeclared identifier '_OWORD'
v25 = *( _OWORD *)&v15[v20 + 112]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2405:12: error: expected expression
*( _OWORD *)&unused[v20 + 96] = *( _OWORD *)&v15[v20 + 96]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2405:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v20 + 96] = *( _OWORD *)&v15[v20 + 96]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2405:44: error: expected expression
*( _OWORD *)&unused[v20 + 96] = *( _OWORD *)&v15[v20 + 96]; 
                                           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2405:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v20 + 96] = *( _OWORD *)&v15[v20 + 96]; 
                                   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2406:12: error: expected expression
*( _OWORD *)&unused[v20 + 112] = v25; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2406:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v20 + 112] = v25; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2422:18: error: expected expression
v28 = *( _OWORD *)&v15[v26]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2422:10: error: use of undeclared identifier '_OWORD'
v28 = *( _OWORD *)&v15[v26]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2423:12: error: expected expression
*( _OWORD *)( ( char *)&stat_buf.__glibc_reserved[1] + v26) = *( _OWORD *)&v15[v26 - 16]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2423:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&stat_buf.__glibc_reserved[1] + v26) = *( _OWORD *)&v15[v26 - 16]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2423:74: error: expected expression
*( _OWORD *)( ( char *)&stat_buf.__glibc_reserved[1] + v26) = *( _OWORD *)&v15[v26 - 16]; 
                                                                         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2423:66: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&stat_buf.__glibc_reserved[1] + v26) = *( _OWORD *)&v15[v26 - 16]; 
                                                                 ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2424:12: error: expected expression
*( _OWORD *)&unused[v26] = v28; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/bzip2.c:2424:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v26] = v28; 
   ^
40 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/testf/src/obj/bzip2.o] Error 1
